2021-XX-XX 4.2.3:

	General improvements:

	all : analyzer optimizations
	js : added `-D js-global=globalThis` to customize global object name (#10282)
	php : added externs for `quoted_printable_decode`, `quoted_printable_encode`, `Attribute`, `NumberFormat`, `IntlCalendar` and other `Intl*` classes

	Bugfixes:

	all : fixed compiler crash on some unreachable code blocks (#10261)
	jvm : fixed `@:native` (#10280)
	jvm : fixed `--xml` generation (#10279)

2021-05-14 4.2.2:

	Bugfixes:

	all : fixed piping stdin/stdout in `--cmd` (#4669, #6726)
	all : fixed rest args typing for overloaded functions (#10143)
	all : fixed using `var` fields as static extensions (#10144)
	all : fixed completion for a type in `expr is Type` (#10167)
	all : fixed subtypes in `expr is Module.SubType` expressions (#10174)
	all : fixed typing chains of calls with constrained type params (#10198)
	all : fixed mixed constraints of anonymous structures and other types (#10162)
	all : fixed operator overloading for enum abstracts (#10173)
	hl : fixed debugging of `catch` blocks (#10109)
	jvm : fixed manifest generation for cases with a lot of jar libraries (#10157)
	js : fixed extending extern classes for es5 (#10192)
	js : fixed checking `this` before `super` for es6 (#10193)
	eval : fixed null pointer exception in `eval.NativeString.fromString(null)`
	eval : fixed multiple locks of `sys.thread.Mutex` from the same thread (#10249)

2021-02-26 4.2.1:

	General improvements:

	threads : changed main thread initialization to make main event loop available during static initialization (#10114)
	php : added extern for `number_format` function (#10115)
	python : rewrote `sys.thread.Thread`, `Mutex` and `Lock` as classes instead of abstracts.

	Bugfixes:

	all : fixed compiler compatibility with OS X 10.13 (#10110)
	all : fixed compiler hanging on `switch` for abstracts with implicit casts involving type parameters and constraints (#10082)