@@ -3,6 +3,7 @@
 	General improvements:
 
 	all : analyzer optimizations
+	macro : support maps in `haxe.macro.Context.makeExpr` (#10259)
 	js : added `-D js-global=globalThis` to customize global object name (#10282)
 	php : added externs for `quoted_printable_decode`, `quoted_printable_encode`, `Attribute`, `NumberFormat`, `IntlCalendar` and other `Intl*` classes
 
